# MEYElens

./: .gitignore  README.md  camera.py  fileio.py  meye.py  meyelens_offlinegui.py  offline.py  online.py  pyproject.toml  requirements.txt  utils.py
.github/workflows/: docs-sync.yml  docs.yml  publish-headless.yml  publish.yml
3d_print_files/: meyelens.3mf  meyelens.stl
brick_brakers/: game_lib.py
c++_scripts/: dual_cam_record  dual_cam_record.cpp
docs/: 404.css  404.html  CNAME  analytics-consent.js  analytics.js  contact.css  contact.html  contact.js  genindex.html  get_started.css  get_started.html  get_started.js  hardware.css  hardware.html  index.html  index.js  install-options.json  model-detail.html  model-zoo.js  model_detail.css  model_zoo.json  models.css  models.html  privacy.html  resources.css  resources.html  software.css  software.html  styles.css  todo.py  tutorial_offline_recording.html  tutorial_online_recording.html  tutorial_preview.html
docs/_modules/: index.html
docs/_modules/meyelens/: camera.html  fileio.html  gaze.html
docs/_sources/api/: meyelens.online.rst.txt
docs/api/: meyelens.meye.html  meyelens.models.html  meyelens.utils.html  modules.html
docs/assets/: updates.json
docs/assets/bibtex/: meye-2021.bib  meyelens-under-review.bib
docs/assets/media/3d_files/: arm_left.stl  cam_arm.stl  cam_holder.stl  ear_support_left.stl  ear_support_right.stl  front_panel.stl  full_print_plate.stl  ir_support.stl  nose_support.stl  right_arm.stl  thumb_nut.stl
docs/docs/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/docs/.doctrees/: environment.pickle  index.doctree
docs/docs/.doctrees/api/: meyelens.camera.doctree  meyelens.doctree  meyelens.fileio.doctree  meyelens.gaze.doctree  meyelens.meye.doctree  meyelens.models.doctree  meyelens.offline.doctree  meyelens.online.doctree  meyelens.utils.doctree  modules.doctree
docs/docs/_modules/: index.html
docs/docs/_modules/meyelens/: camera.html  fileio.html  gaze.html  meye.html  meyelens_offlinegui.html  offline.html  utils.html
docs/docs/_sources/: index.rst.txt
docs/docs/_sources/api/: meyelens.camera.rst.txt  meyelens.fileio.rst.txt  meyelens.gaze.rst.txt  meyelens.meye.rst.txt  meyelens.rst.txt  meyelens.utils.rst.txt  modules.rst.txt
docs/docs/api/: meyelens.camera.html  meyelens.fileio.html  meyelens.gaze.html  meyelens.html  meyelens.meye.html  meyelens.models.html  meyelens.offline.html  meyelens.online.html  meyelens.utils.html  modules.html
docs/docs/source/: conf.py  index.rst
docs/docs/source/api/: meyelens.models.rst  meyelens.offline.rst
docs/source/: conf.py
examples/: gaze_calib.py  pft.py  plr.py  plr_parallel.py
examples/data/20251031_185440-plr_0/: expinfo.csv
examples/data/20251031_185532-plr_0/: expinfo.csv
meyelens/: __init__.py  __main__.py  camera.py  delete.ipynb  fileio.py  gaze.py  meye.py  offline.py  online.py  utils.py
meyelens.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
meyelens/examples/: gaze_tracking_example.py  offline_recorder.py  online_recorder.py
sandbox/: cancellami_pong.py  gaze.py  gaze_calibration.py
sandbox/brick_brakers/: main.py
scripts/: build_headless_dist.py
tests/: gaze.py  gaze_calibration.py  test_plr_bambini.py
