[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meyelens"
version = "0.1.0"
description = "Gaze-tracking and pupillometry with MEYE"
authors = [
    { name = "Raffaele Mazziotti", email = "mzzrff@gmail.com" },
    { name = "Giacomo Vecchieschi", email = "giacomovec@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"

# **light-weight runtime deps (install quickly)**
dependencies = [
    "numpy",
    "opencv-python",
    "scikit-image",
    "pandas",
    "toml"
]


[tool.setuptools]
packages = ["meyelens", "meyelens.models"]
include-package-data = true

[tool.setuptools.package-data]
"meyelens.models" = ["meye-2022-01-24.h5"]


