[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meyelens"
version = "0.2.2"
description = "Gaze-tracking and pupillometry with MEYE"
readme = "README.md"
requires-python = ">=3.8"

authors = [
  { name = "Raffaele Mazziotti", email = "mzzrff@gmail.com" },
  { name = "Giacomo Vecchieschi", email = "giacomovecchieschi@gmail.com" }
]

# Runtime dependencies ONLY (what users actually need when they `pip install meyelens`)
dependencies = [
  "joblib==1.4.2",
  "matplotlib==3.10.0",
  "numpy==2.2.6",
  "opencv-python==4.12.0.88",
  "pandas==2.3.3",
  "PyQt6==6.10.1",
  "scikit-learn==1.6.1",
  "scikit-image==0.25.2",
  "toml==0.10.2",
]

[project.urls]
Homepage = "https://github.com/raffaelemazziotti/MEYElens"
Repository = "https://github.com/raffaelemazziotti/MEYElens"
Documentation = "https://raffaelemazziotti.github.io/MEYElens"

[project.optional-dependencies]
# Optional: install with `pip install "meyelens[tf]"`
tf = ["tensorflow==2.20.0"]

# (Optional alias) keep if you already referenced it somewhere; it does nothing.
no_tf = []

# Optional: install with `pip install -e ".[docs]"` or `pip install "meyelens[docs]"`
docs = [
  "sphinx>=7",
  "sphinx-rtd-theme>=2",
  "myst-parser>=2",
  "sphinx-autobuild>=2024.0.0",
  "sphinx-copybutton>=0.5.2",
]

[project.scripts]
meyelens-gui = "meyelens.meyelens_offlinegui:main"

[tool.setuptools]
include-package-data = true

# More robust than hard-coding packages = [...]
[tool.setuptools.packages.find]
where = ["."]
include = ["meyelens*"]

[tool.setuptools.package-data]
"meyelens.models" = ["meye-2022-01-24.h5"]
